- Fontscaling fix on mobile - Form Validation fix - Responsive Layout improved

--- a/oh-my-gacha/src/main/resources/static/styling.css
+++ b/oh-my-gacha/src/main/resources/static/styling.css
@@ -7,25 +7,40 @@
 
 #back {
 	margin-top: 2em;
+	margin-bottom: 5em;
 }
 
 #banner {
 	margin: 0;
 	width: 100%;
-	overflow-x: hidden;
 	padding: 3em;
 	background-color: #3d3b3b;
-	border-bottom: 2px solid black; 
+	border-bottom: 2px solid black;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-
 }
 
 #banner h3 {
 	font-size: 3em;
 	font-weight: bold;
+}
+
+.container {
+	margin-bottom: 5em;
+}
+
+.form-group.row {
+	align-items: top;
+}
+
+.form-span {
+	margin-bottom: 1em;
+}
+
+.input-group-prepend {
+	justify-content: center;
 }
 
 .blockquote {
@@ -47,17 +62,18 @@ body {
 	background-color: #292828;
 }
 
-.row span {
-	margin-top: 2em;
+.row div{
+	margin-bottom: 1em;
+	justify-content: center;
 }
 
-.input-group-prepend span {
-	margin-top: 0;
+#pound-sign{
+	margin: 0;
 }
-
 .card {
 	color: white;
 	border: 0;
+	background-color: #524f4f;
 }
 
 .card-header {
